# discord-ground

./: Cargo.toml
src/: commands.rs  main.rs
src/commands/: execute.rs  hello.rs
