[package]
name = "rust4fun-discord-ground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
poise = "0.6.1"
shuttle-runtime = "0.41.0"
shuttle-secrets = "0.41.0"
shuttle-serenity = "0.41.0"
tokio = "1.26.0"
tracing = "0.1.37"
reqwest = { version = "0.11.25", features = ["json"] }
serde = "1.0.197"
